[gd_scene load_steps=5 format=2]

[ext_resource path="res://img/bg.png" type="Texture" id=1]
[ext_resource path="res://Run/map.gd" type="Script" id=2]
[ext_resource path="res://gui/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Run/Player_dog.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="run" type="CanvasLayer" parent="."]

[node name="bg" type="TextureRect" parent="run"]
margin_left = -1857.0
margin_top = -950.0
margin_right = -1757.0
margin_bottom = -850.0
rect_scale = Vector2( 40, 20 )
texture = ExtResource( 1 )

[node name="Player" parent="run" instance=ExtResource( 4 )]
position = Vector2( 440.235, 273.777 )

[node name="gui" type="CanvasLayer" parent="."]

[node name="GUI" parent="gui" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.909804 )

[connection signal="base_update" from="." to="." method="_on_Node2D_base_update"]
[connection signal="exp_max_update" from="." to="gui/GUI" method="_on_Node2D_exp_max_update"]
[connection signal="exp_update" from="." to="." method="_on_Node2D_exp_update"]
[connection signal="exp_update" from="." to="gui/GUI" method="_on_Node2D_exp_update"]
[connection signal="health_max_update" from="." to="gui/GUI" method="_on_Node2D_health_max_update"]
[connection signal="health_update" from="." to="gui/GUI" method="_on_Node2D_health_update"]
[connection signal="level_update" from="." to="gui/GUI" method="_on_Node2D_level_update"]
